2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	  blacklist gstreamer.py because we don't want to split out for
	  0.8 and 0.10 just for pychecker
	* flumotion/worker/checks/video010.py:
	  add a state= to do_element_check() to compare with the 08 version

2006-01-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/component-initialization-protocol:
	  update protocol, add check method, make do_ methods
	* flumotion/component/bouncers/htpasswdcrypt.py:
	  setup -> do_setup()
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/feedcomponent08.py:
	  setup -> do_setup()
	  reorder some methods according to protocol

2006-01-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/webcam/webcam.py:
	  put together a string step by step for the caps.  Works for
	  both 0.8 and 0.10
	* flumotion/wizard/steps.py:
	  we can get RGB, hence no format.  handle that case.
	* flumotion/worker/checks/video.py:
	  fix a silly bug that caused the config to have a tuple for format

2006-01-30  Andy Wingo  <wingo@pobox.com>

	* flumotion/launch/main.py (ComponentWrapper.__init__): Parse
	fraction values as well.
	(main): Implement a --delay option that will delay starting up the
	components by a certain amount of time. Can be useful for testing
	synchronization.

2006-01-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/component.py:
	  in 0.8, provideMasterClock returns None, not a tuple.
	  Handle that case.

2006-01-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent08.py:
	  set eaterNames and feederNames on the state so that startup
	  happens correctly.

2006-01-30  Edward Hervey  <edward@fluendo.com>

	* po/fr.po:
	Now even FromageTV can use flumotion :)

2006-01-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/gstreamer.py: